--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
             <div class="owl-carousel testimonial-carousel position-relative">
                 <div class="testimonial-item text-center">
                     <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Ayşe Fatma</h5>
+                    <h5 class="mb-0">İnci Mutlu</h5>
                     <p>UI/UX Tasarımcısı</p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">Tasarım anlayışım gelişti. Gerçek dünya örnekleriyle çok daha yaratıcı çözümler üretebiliyorum. E-eğitim platformu harika!</p>
@@ -442,7 +442,7 @@
                 </div>
                 <div class="testimonial-item text-center">
                     <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Ahmet Mehmet</h5>
+                    <h5 class="mb-0">Ahmet Yılmaz</h5>
                     <p>Web Güvenlik Uzmanı</p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">Web güvenliği konusundaki bilgim buradan aldığım eğitimle genişledi. Eğitim platformu çok kapsamlı ve anlaşılır.</p>
@@ -450,7 +450,7 @@
                 </div>
                 <div class="testimonial-item text-center">
                     <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Mehmet Ahmet</h5>
+                    <h5 class="mb-0">Mehmet Çelik</h5>
                     <p>API Mühendisi</p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">API geliştirme konusunda çok şey öğrendim. e-Eğitim platformu sayesinde süreci daha verimli hale getirebildim.</p>
@@ -458,7 +458,7 @@
                 </div>
                 <div class="testimonial-item text-center">
                     <img class="border rounded-circle p-2 mx-auto mb-3" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Fatma Ayşe</h5>
+                    <h5 class="mb-0">Ayşe Gürbüz</h5>
                     <p>Junior Backend Mühendisi</p>
                     <div class="testimonial-text bg-light text-center p-4">
                     <p class="mb-0">Backend geliştirmede çok sağlam temeller attım ve ilk işime girebildim. e-Eğitim platformu öğrenmeyi kolaylaştırdı.</p>
