--- a/team3.html
+++ b/team3.html
@@ -121,7 +121,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Ahmet Mehmet</h5>
+                            <h5 class="mb-0">Arslan Öztürk</h5>
                             <small>Senior Veri Bilimcisi</small>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Ayşe Fatma</h5>
+                            <h5 class="mb-0">Neslihan Hasçelik</h5>
                             <small>Makine Öğrenmesi Mühendisi</small>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Mehmet Ahmet</h5>
+                            <h5 class="mb-0">Ali Yıldız</h5>
                             <small>Veri Analisti</small>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Fatma Ayşe</h5>
+                            <h5 class="mb-0">İrem Demirci</h5>
                             <small>Büyük Veri Mühendisi</small>
                         </div>
                     </div>
