--- a/course1.html
+++ b/course1.html
@@ -124,7 +124,7 @@
                             <h5 class="mb-4">Yeni Başlayanlar için Web Tasarım & Geliştirme Eğitimi</h5>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Ahmet Mehmet</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Ahmet Çelik</small>
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49 Saat</small>
                             <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Öğrenci</small>
                         </div>
