--- a/course2.html
+++ b/course2.html
@@ -123,7 +123,7 @@
                         <h5 class="mb-4">Proje Bazlı Full-Stack Geliştirme Paketi</h5>
                     </div>
                     <div class="d-flex border-top">
-                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Ayşe Fatma</small>
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Ayşe Öztürk</small>
                         <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>2.5 Saat</small>
                         <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>95 Öğrenci</small>
                     </div>
