--- a/course3.html
+++ b/course3.html
@@ -122,7 +122,7 @@
                         <h5 class="mb-4">React.js ile Modern ve Yenilikçi Web Uygulamaları</h5>
                     </div>
                     <div class="d-flex border-top">
-                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Fatma Ayşe</small>
+                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Fatma Yılmaz</small>
                         <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>3.79 Saat</small>
                         <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>10 Öğrenci</small>
                     </div>
