--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                             <h5 class="mb-4">Yeni Başlayanlar için Web Tasarım & Geliştirme Eğitimi</h5>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Ahmet Mehmet</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Ahmet Çelik</small>
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49 Saat</small>
                             <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Öğrenci</small>
                         </div>
@@ -385,7 +385,7 @@
                             <h5 class="mb-4">Proje Bazlı Full-Stack Geliştirme Paketi</h5>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Ayşe Fatma</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Ayşe Öztürk</small>
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>2.5 Saat</small>
                             <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>95 Öğrenci</small>
                         </div>
@@ -413,7 +413,7 @@
                             <h5 class="mb-4">React.js ile Modern ve Yenilikçi Web Uygulamaları</h5>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Fatma Ayşe</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Fatma Yılmaz</small>
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>3.79 Saat</small>
                             <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>10 Öğrenci</small>
                         </div>
