--- a/team1.html
+++ b/team1.html
@@ -121,7 +121,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Ahmet Mehmet</h5>
+                            <h5 class="mb-0">Mehmet Sarı</h5>
                             <small>UI/UX Tasarım Uzmanı</small>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Ayşe Fatma</h5>
+                            <h5 class="mb-0">Buse Bayraktar</h5>
                             <small>PWA Geliştiricisi </small>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Mehmet Ahmet</h5>
+                            <h5 class="mb-0">Ahmet Çelik</h5>
                             <small>Senior Frontend Geliştiricisi</small>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Fatma Ayşe</h5>
+                            <h5 class="mb-0">Fatma Çelik</h5>
                             <small>React Native Geliştiricisi</small>
                         </div>
                     </div>
