--- a/team2.html
+++ b/team2.html
@@ -121,7 +121,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Ahmet Mehmet</h5>
+                            <h5 class="mb-0">Hasan Yılmaz</h5>
                             <small>Senior Backend Developer</small>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Ayşe Fatma</h5>
+                            <h5 class="mb-0">Ayşe Öztürk</h5>
                             <small>Java Backend Mühendisi</small>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Mehmet Ahmet</h5>
+                            <h5 class="mb-0">Mehmet Yılmaz</h5>
                             <small>Python Backend Geliştiricisi</small>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Fatma Ayşe</h5>
+                            <h5 class="mb-0">Hülya Hasçelik</h5>
                             <small>Ruby on Rails</small>
                         </div>
                     </div>
