--- a/team2.html
+++ b/team2.html
@@ -121,7 +121,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Hasan Yılmaz</h5>
+                            <h5 class="mb-0">Hasan Kara</h5>
                             <small>Senior Backend Developer</small>
                         </div>
                     </div>
