--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Ana Sayfa</a>
                 <a href="about.html" class="nav-item nav-link">Hakkımızda</a>
-                <a href="about.html" class="nav-item nav-link">Misyon/Vizyon</a>
+                <a href="mission.html" class="nav-item nav-link">Misyon/Vizyon</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Eğitimlerimiz</a>
                     <div class="dropdown-menu fade-down m-0">
