update courses and teams

--- a/announcements.html
+++ b/announcements.html
@@ -47,7 +47,7 @@
                 <a href="about.html" class="nav-item nav-link">Hakkımızda</a>
                 <a href="mission.html" class="nav-item nav-link">Misyon/Vizyon</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Eğitimlerimiz</a>
+                    <a href="courses.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Eğitimlerimiz</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="course1.html" class="dropdown-item">Yeni Başlayanlar için Web Tasarım & Geliştirme Eğitimi</a>
                         <a href="course2.html" class="dropdown-item">Proje Bazlı Full-Stack Geliştirme Paketi</a>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Birimlerimiz</a>
+                    <a href="teams.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Birimlerimiz</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="team1.html" class="dropdown-item">Frontend</a>
                         <a href="team2.html" class="dropdown-item">Backend</a>
