--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                 <a href="about.html" class="nav-item nav-link active">Hakkımızda</a>
                 <a href="mission.html" class="nav-item nav-link">Misyon/Vizyon</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Eğitimlerimiz</a>
+                    <a href="courses.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Eğitimlerimiz</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="course1.html" class="dropdown-item">Yeni Başlayanlar için Web Tasarım & Geliştirme Eğitimi</a>
                         <a href="course2.html" class="dropdown-item">Proje Bazlı Full-Stack Geliştirme Paketi</a>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Birimlerimiz</a>
+                    <a href="teams.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Birimlerimiz</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="team1.html" class="dropdown-item">Frontend</a>
                         <a href="team2.html" class="dropdown-item">Backend</a>
@@ -264,7 +264,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div><br><br>
+            <center>
+                <div class="wow fadeInUp" data-wow-delay="0.1s">
+                    <a href="teams.html" target="_blank">Birimler Sayfasını Görüntüle</a>
+                </div>
+            </center>
         </div>
     </div>
     <!-- Team End -->
