--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Kayıt Ol</title>
+    <title>Eğitimlerimiz</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -32,15 +32,6 @@
 </head>
 
 <body>
-    <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-            <span class="sr-only">Yükleniyor...</span>
-        </div>
-    </div>
-    <!-- Spinner End -->
-
-
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -55,7 +46,7 @@
                 <a href="about.html" class="nav-item nav-link">Hakkımızda</a>
                 <a href="mission.html" class="nav-item nav-link">Misyon/Vizyon</a>
                 <div class="nav-item dropdown">
-                    <a href="courses.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Eğitimlerimiz</a>
+                    <a href="courses.html" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Eğitimlerimiz</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="course1.html" class="dropdown-item">Yeni Başlayanlar için Web Tasarım & Geliştirme Eğitimi</a>
                         <a href="course2.html" class="dropdown-item">Proje Bazlı Full-Stack Geliştirme Paketi</a>
@@ -79,36 +70,114 @@
     </nav>
     <!-- Navbar End -->
 
-    <!-- Login Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Kayıt Ol</h6>
-                <h1 class="mb-5">Aramıza Katıl</h1>
-                <form action="index.html" method="get">
-                    <div class="mb-3">
-                        <label for="username" class="form-label">Kullanıcı Adı</label>
-                        <input type="text" class="form-control" id="username" placeholder="Kullanıcı adınızı girin">
-                    </div>
-                    <div class="mb-3">
-                        <label for="username" class="form-label">E-posta</label>
-                        <input type="text" class="form-control" id="username" placeholder="E-posta adresinizi girin">
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Şifre</label>
-                        <input type="password" class="form-control" id="password" placeholder="Şifrenizi girin">
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Şifre Tekrar</label>
-                        <input type="password" class="form-control" id="password" placeholder="Şifrenizi tekrar girin">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Kayıt Ol</button><br><br>
-                </form>
+    <!-- Header Start -->
+    <div class="container-fluid bg-primary py-5 mb-5 page-header">
+        <div class="container py-5">
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                    <h1 class="display-3 text-white animated slideInDown" style="text-align: center;">Eğitimlerimiz</h1>
+                </div>
             </div>
         </div>
     </div>
-    <!-- Login End -->
+    <!-- Header End -->
 
+    <!-- Course Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+                <h6 class="section-title bg-white text-center text-primary px-3">Eğitimler</h6>
+                <h1 class="mb-5">Tüm Eğitimler</h1>
+            </div>
+            <div class="row g-4 justify-content-center">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="course-item bg-light">
+                        <div class="position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/course-1.jpg" alt="">
+                            <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
+                                <a href="course1.html" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Eğitimi Görüntüle</a>
+                                <a href="course1.html" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Katıl</a>
+                            </div>
+                        </div>
+                        <div class="text-center p-4 pb-0">
+                            <h3 class="mb-0">250 TL</h3>
+                            <div class="mb-3">
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small>(810)</small>
+                            </div>
+                            <h5 class="mb-4">Yeni Başlayanlar için Web Tasarım & Geliştirme Eğitimi</h5>
+                        </div>
+                        <div class="d-flex border-top">
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Ahmet Çelik</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49 Saat</small>
+                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Öğrenci</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="course-item bg-light">
+                        <div class="position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/course-2.jpg" alt="">
+                            <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
+                                <a href="course2.html" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Eğitimi Görüntüle</a>
+                                <a href="course2.html" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Katıl</a>
+                            </div>
+                        </div>
+                        <div class="text-center p-4 pb-0">
+                            <h3 class="mb-0">375 TL</h3>
+                            <div class="mb-3">
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star"></small>
+                                <small>(578)</small>
+                            </div>
+                            <h5 class="mb-4">Proje Bazlı Full-Stack Geliştirme Paketi</h5>
+                        </div>
+                        <div class="d-flex border-top">
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Ayşe Öztürk</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>2.5 Saat</small>
+                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>95 Öğrenci</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="course-item bg-light">
+                        <div class="position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/course-3.jpg" alt="">
+                            <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
+                                <a href="course3.html" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Eğitimi Görüntüle</a>
+                                <a href="course3.html" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Katıl</a>
+                            </div>
+                        </div>
+                        <div class="text-center p-4 pb-0">
+                            <h3 class="mb-0">150 TL</h3>
+                            <div class="mb-3">
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star"></small>
+                                <small class="fa fa-star"></small>
+                                <small>(358)</small>
+                            </div>
+                            <h5 class="mb-4">React.js ile Modern ve Yenilikçi Web Uygulamaları</h5>
+                        </div>
+                        <div class="d-flex border-top">
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>Fatma Yılmaz</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>3.79 Saat</small>
+                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>10 Öğrenci</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Course End -->
 
      <!-- Footer Start -->
      <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -192,7 +261,6 @@
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -202,8 +270,8 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
 </html>
-
